tests/snapshots/retire_snapshot__divergent_retire.snap
---
source: tests/retire_snapshot.rs
expression: "capture_retire(seed, retiree)"
---
direction A -> B
role: Responder
control item 0 (30 bytes) / preamble /
55799_1([
    "rumors",
    2,
    h'b2f7f581d6de3c06a822fd6e7e8265fb',
    0,
])
control item 1 (132 bytes) / greeting /
24_0(<<{
    "listing": {
        121_0: h'9602973f461003f36f18b1ccb468d352b1f1a711efc1e963',
    },
    "set_len": 1,
    "version": 53846_1(h'5540'),
    "max_version_bytes": 2,
    "payload_depth_limit": 256_1,
    "target_message_size": 1830400_2,
}>>)
control item 2 (2 bytes) / epilogue /
"."
Responder stream 0 (height 31), epoch 0, 24 wire bytes
  frame 0 (16 bytes) / Supply(Continue) /
[0, 6, 63_0(<<63_0(<<53846_1(h'5540'), 2>>)>>)]
  frame 1 (3 bytes) / QueryEmpty(End) /
[0, 3]
  frame 2 (3 bytes) / End(Stream) /
[0, 9]

direction B -> A
role: Initiator
control item 0 (30 bytes) / preamble /
55799_1([
    "rumors",
    2,
    h'b2f7f581d6de3c06a822fd6e7e8265fb',
    1,
])
control item 1 (131 bytes) / greeting /
24_0(<<{
    "listing": {
        241_0: h'871321571b8582637fc4d52dc6df1c0f865df999eaab42f2',
    },
    "set_len": 1,
    "version": 53846_1(h'77'),
    "max_version_bytes": 1,
    "payload_depth_limit": 256_1,
    "target_message_size": 1830400_2,
}>>)
control item 2 (5 bytes) / party hand-off /
53845_1(h'48')
control item 3 (2 bytes) / epilogue /
"."
Initiator stream 0 (height 31), epoch 0, 20 wire bytes
  frame 0 (15 bytes) / Supply(End) /
[0, 7, 63_0(<<63_0(<<53846_1(h'77'), 1>>)>>)]
  frame 1 (3 bytes) / End(Stream) /
[0, 9]
Initiator stream 1 (height 30), epoch 0, 8 wire bytes
  frame 0 (3 bytes) / End(Reply) /
[1, 8]
  frame 1 (3 bytes) / End(Stream) /
[1, 9]
