tests/snapshots/retire_snapshot__mutual_retire_declines.snap
---
source: tests/retire_snapshot.rs
expression: capture
---
direction A -> B
control item 0 (30 bytes) / preamble /
55799_1([
    "rumors",
    2,
    h'b2f7f581d6de3c06a822fd6e7e8265fb',
    1,
])
control item 1 (2 bytes) / epilogue /
"."

direction B -> A
control item 0 (30 bytes) / preamble /
55799_1([
    "rumors",
    2,
    h'b2f7f581d6de3c06a822fd6e7e8265fb',
    1,
])
control item 1 (2 bytes) / epilogue /
"."
