tests/snapshots/retire_snapshot__retire_into_bootstrapper.snap
---
source: tests/retire_snapshot.rs
expression: capture
---
direction A -> B
role: Initiator
control item 0 (30 bytes) / preamble /
55799_1([
    "rumors",
    2,
    h'00000000000000000000000000000000',
    0,
])
control item 1 (103 bytes) / greeting /
24_0(<<{
    "listing": {},
    "set_len": 0,
    "version": 53846_1(h'e0'),
    "max_version_bytes": 0,
    "payload_depth_limit": 256_1,
    "target_message_size": 1830400_2,
}>>)
control item 2 (2 bytes) / epilogue /
"."

direction B -> A
role: Responder
control item 0 (30 bytes) / preamble /
55799_1([
    "rumors",
    2,
    h'b2f7f581d6de3c06a822fd6e7e8265fb',
    1,
])
control item 1 (160 bytes) / greeting /
24_0(<<{
    "listing": {
        173_0: h'c427db6fe92e923509619eb51d8a601e31b985ac24a3baa2',
        241_0: h'871321571b8582637fc4d52dc6df1c0f865df999eaab42f2',
    },
    "set_len": 2,
    "version": 53846_1(h'72c0'),
    "max_version_bytes": 2,
    "payload_depth_limit": 256_1,
    "target_message_size": 1830400_2,
}>>)
control item 2 (5 bytes) / party hand-off /
53845_1(h'48')
control item 3 (2 bytes) / epilogue /
"."
Responder stream 0 (height 31), epoch 0, 36 wire bytes
  frame 0 (16 bytes) / Supply(Continue) /
[0, 6, 63_0(<<63_0(<<53846_1(h'72c0'), 2>>)>>)]
  frame 1 (15 bytes) / Supply(End) /
[0, 7, 63_0(<<63_0(<<53846_1(h'77'), 1>>)>>)]
  frame 2 (3 bytes) / End(Stream) /
[0, 9]
