tests/snapshots/retire_snapshot__v1_divergent_retire.snap
---
source: tests/retire_snapshot.rs
expression: capture
---
party A                         │ party B
─────────────────────────────── │ ───────────────────────────────
sent 25 bytes                   │ sent 25 bytes
  0000: 52 55 4d 4f 52 53 00 01 │   0000: 52 55 4d 4f 52 53 00 01
  0008: 8c 18 96 68 c9 e4 83 72 │   0008: 8c 18 96 68 c9 e4 83 72
  0010: 37 bf 31 e0 2d 7f 6b 70 │   0010: 37 bf 31 e0 2d 7f 6b 70
  0018: 00                      │   0018: 01
received 25 bytes               │ received 25 bytes
  0000: 52 55 4d 4f 52 53 00 01 │   0000: 52 55 4d 4f 52 53 00 01
  0008: 8c 18 96 68 c9 e4 83 72 │   0008: 8c 18 96 68 c9 e4 83 72
  0010: 37 bf 31 e0 2d 7f 6b 70 │   0010: 37 bf 31 e0 2d 7f 6b 70
  0018: 01                      │   0018: 00
sent 6 bytes                    │ sent 5 bytes
  0000: 00 00 00 02 55 40       │   0000: 00 00 00 01 77
received 37 bytes               │ received 6 bytes
  0000: 00 00 00 01 77 00 00 00 │   0000: 00 00 00 02 55 40
  0008: 1c 01 00 00 00 12 c6 9e │ sent 32 bytes
  0010: 8a 5b e3 ca 3a b2 1a b8 │   0000: 00 00 00 1c 01 00 00 00
  0018: c9 29 55 ff b2 5b 22 ef │   0008: 12 c6 9e 8a 5b e3 ca 3a
  0020: 07 69 d1 38 53          │   0010: b2 1a b8 c9 29 55 ff b2
sent 33 bytes                   │   0018: 5b 22 ef 07 69 d1 38 53
  0000: 00 00 00 1d 01 00 00 00 │ received 33 bytes
  0008: c0 4e 20 95 fa b2 a3 d0 │   0000: 00 00 00 1d 01 00 00 00
  0010: 70 53 3b e5 cc 06 f8 47 │   0008: c0 4e 20 95 fa b2 a3 d0
  0018: 13 ff 93 bd 25 74 cf 20 │   0010: 70 53 3b e5 cc 06 f8 47
  0020: 16                      │   0018: 13 ff 93 bd 25 74 cf 20
received 59 bytes               │   0020: 16
  0000: 00 00 00 37 01 00 00 00 │ sent 59 bytes
  0008: 0d 1f 40 60 1d f6 30 c7 │   0000: 00 00 00 37 01 00 00 00
  0010: 79 83 dc e0 17 d4 1c b8 │   0008: 0d 1f 40 60 1d f6 30 c7
  0018: 3b ef 0b ab 39 51 4c 6a │   0010: 79 83 dc e0 17 d4 1c b8
  0020: 80 b0 e9 bd a2 43 29 5b │   0018: 3b ef 0b ab 39 51 4c 6a
  0028: a5 77 01 00 00 00 00 00 │   0020: 80 b0 e9 bd a2 43 29 5b
  0030: 00 00 01 00 00 00 c0 00 │   0028: a5 77 01 00 00 00 00 00
  0038: 00 00 00                │   0030: 00 00 01 00 00 00 c0 00
sent 59 bytes                   │   0038: 00 00 00
  0000: 00 00 00 37 01 00 00 00 │ received 59 bytes
  0008: c0 d8 1e 7d 50 5b f9 55 │   0000: 00 00 00 37 01 00 00 00
  0010: bb 12 69 5d 0b be ca 69 │   0008: c0 d8 1e 7d 50 5b f9 55
  0018: 3f f9 84 40 c5 d5 93 d5 │   0010: bb 12 69 5d 0b be ca 69
  0020: 2c 2b 4b 5d b3 ac 67 86 │   0018: 3f f9 84 40 c5 d5 93 d5
  0028: 1a 55 40 02 00 00 00 00 │   0020: 2c 2b 4b 5d b3 ac 67 86
  0030: 00 00 00 00 00 00 00 00 │   0028: 1a 55 40 02 00 00 00 00
  0038: 00 00 00                │   0030: 00 00 00 00 00 00 00 00
received 5 bytes                │   0038: 00 00 00
  0000: 00 00 00 01 48          │ sent 5 bytes
                                │   0000: 00 00 00 01 48
